more responses to Reviewer 2

--- a/writing/Cubert/revision/Cubert cover letter.tex
+++ b/writing/Cubert/revision/Cubert cover letter.tex
@@ -137,17 +137,28 @@ The reviewer references previous work that establishes the flexibility of post-V
 
 \item \emph{The authors take participants' willingness to accept the sentence \emph{The NOUNS together were ADJECTIVE} as compatible with the speaker's intended meaning as an indication of their willingness to allow a collective interpretation of the target sentence. But this is inherently problematic, because that sentence does not unambiguously signal a collective meaning to the participant! Take the following example: ``The boys together were smiling.'' The true `collective' interpretation of this sentence is that each boy contributed in such a way that collectively the boys created what can be truthfully described as a smiling event, and no one boy has this property, while the group does.}
 
-``the non-distributive [(i.e., collective)], \emph{together} construal of a sentence doesn't entail the falsehood of the distributive, \emph{each} version'' (Schwarzschild, 1994, p.~212)
+This point is a continuation of the worry surrounding collective interpretations and \emph{together} expressed in Reviewer 2's points 1 and 4; see above for our arguments that \emph{together} indeed does signal a collective interpretation. The issue of collective smiling is a separate one. To better understand the factors that go into the disambiguation of plural predications, we have chosen to consider in detail a specific class of predicates with (relatively) objective evaluation strategies: gradable adjectives like \emph{heavy} or \emph{big}. 
+The measurement inherent to the semantics of these predicates delivers scalar interpretations that are amenable to quantitative study. By examining intuitions about the use of these predicates, together with the predication context that delivers them, we stand to better understand the mechanism of plural predication: when collective interpretations are appropriate, what they communicate, and what mediates the choice between distributive and collective interpretations in the first place. For collective action statements, the evaluation criteria are much less clear, so it is difficult to intuit precisely what these statements entail.\footnote{This is not to say that we know nothing about collective action statements. For example, Margaret Gilbert's Plural Subject Theory makes great gains on this ground in the domain of social philosophy (for a recent overview, see Gilbert, 2013).} However, we disagree with a key aspect of the reviewer's claim, namely that a collective interpretation entails the falsehood of a distributive one. A collective interpretation merely asserts that the plurality holds some property; ``the non-distributive [(i.e., collective)], \emph{together} construal of a sentence doesn't entail the falsehood of the distributive, \emph{each} version'' (Schwarzschild, 1994, p.~212). Just because a distributive interpretation holds true does not preclude a collective interpretation. Whatever it means to collectively smile, it crucially does not mean that there was necessarily no individual smiling. Moreover, in our paraphrase endorsement methodology, participants always rated \emph{both} distributive (i.e., \emph{each}) \emph{and} collective (i.e., \emph{together}) paraphrases; given the choice between ``the boys each smiled'' and ``the boys together smiled,'' it sounds like the reviewer would endorse without hesitation only the distributive paraphrase (an option that was provided to all of our participants).
 
-\item \emph{Participants may have been inserting a silent collectivizing noun (e.g., \emph{box}, \emph{pile}, \emph{stack}) into the together sentences.}
+\item \emph{Participants may have been inserting a silent collectivizing noun (e.g., \emph{box}, \emph{pile}, \emph{stack}) into the \emph{together} sentences.}
 
-\item \emph{A plural definite description like the boxes maps onto an atomic join semi-lattice. There is therefore semantically in the representation, a maximal element (just as there is with the singular definite description the box). It is entirely possible that participants were predicating of this maximal element, which would make it seem as though they are accessing the collective interpretation, when in fact they are not.}
+While it is impossible to prove the absence of invisible words, we believe this point is related to the potential representational coercion story that we raise in the discussion of Expt.~3: perhaps participants reanalyzed ``the boxes'' as referring to a single individual, that is, to a pile. We have now raised the possibility of silent nouns in the context of our discussion of this point. However, the problem with this story remains the same: the lack of effect for \emph{heavy} (and the other predicates whose dimensions were not targeted in the new Expt.~4); if our predictability manipulation somehow led to reanalysis or the insertion of silent nouns, this should have happened across the board, leading to increased rates of collective interpretations for all predicates. But this is not what we found. Instead, we found increased rates of collective interpretations only when the relevant dimension had been regularized, as predicted by the contextual predictability hypothesis.
+
+\item \emph{A plural definite description like \emph{the boxes} maps onto an atomic join semi-lattice. There is therefore semantically in the representation, a maximal element (just as there is with the singular definite description \emph{the box}). It is entirely possible that participants were predicating of this maximal element, which would make it seem as though they are accessing the collective interpretation, when in fact they are not.}
+
+According to standard theories of the semantics of plurality (e.g., Link, 1983, and subsequent work), a plural definite description like \emph{the boxes} refers to a plural, non-atomic individual (i.e., to a sum of individuals or a non-singleton set, depending on the approach taken); it is nominal predicates (i.e., bare nouns) that map onto atomic join semi-lattices. Plural predication transpires when a plural individual enters into predication; collective predication occurs when we say of a plural individual that it holds the relevant property. Formally, this amounts to asserting that the plural individual is in the denotation of the semantically singular predicate (i.e., a predicate not closed under sum-formation with something like Link's *-operator). Thus, when we ascribe to a plural individual---regardless of whether it is the maximal element of the nominal denotation from which it was drawn---some property directly, we have collective predication.
 
 \item \emph{The authors are aware of the context-dependence of the gradable adjectives that are the target of their investigation (e.g., \emph{big}, \emph{tall}, \emph{heavy}), but they do not make too much of this in the paper. One possibility is that \emph{The boxes (together) are big} could be taken to mean something like, `If you look at the boxes all together, then they form a comparison class such that they surpass some relevant threshold and could be considered to be big.'}
 
+\gcs{it's not clear to me what the point is here}
+
 \item \emph{Don't predicates such as \emph{have brown eyes} have to apply at the atomic level? If so, then aren't there predicates out there for which young language learners must learn that they obligatorily apply to atomic individuals that are members of a plurality? And if this is the case, then couldn't \emph{big} and \emph{tall} be stubbornly distributive at the lexical level?}
 
+We thank the reviewer for bringing this point to our attention. Indeed, there are predicates like \emph{have brown eyes} that appear to necessitate distributive construals. We have added discussion of these so-called ``distributive'' predicates to our introduction, where we lay out the general puzzle. Whereas having brown eyes is a property that necessarily holds of individuals, collective size is not: there is no conceptual barrier to attributing some size directly to a plurality (compare ``the group of men has brown eyes'' with ``the pile of boxes is heavy''). Learning that \emph{have brown eyes} is distributive is tantamount to learning what \emph{have brown eyes} means; not so for stubbornly distributive predicates.
+
 \item \emph{If there are predicates like \emph{gather} that must apply at the level of the group (i.e., they are stubbornly collective) why is it not unreasonable to think that these predicates contrast with another category, whose denotation requires them to apply at the atomic level, and another category, which are flexible in the level to which they apply?}
+
+As with distributive predicates like \emph{have brown eyes} (cf.~our response to Reviewer 2's point 9 above), collective predicates like \emph{gather} name properties that require a collective interpretation by virtue of their meaning. We have added this point to our discussion of the puzzle surrounding stubbornly distributive predicates, whose meanings pose no conceptual barriers to either interpretation.
 
 \item \emph{I am not able to interpret \emph{These boxes are big} collectively. (I am a native speaker of American English.) I can, however, maybe access a collective interpretation of \emph{These boxes are tall}. This paper doesn't allow me to understand why I am encountering an introspective difference between these two predicates, or why we see one in the experimental results.}
 
