--- a/writing/Cubert/revision/Cubert revision.tex
+++ b/writing/Cubert/revision/Cubert revision.tex
@@ -209,7 +209,7 @@ This explanation suffers two flaws:
 First, it hypothesizes a categorical distinction that may not hold; in Expt.~2, we find a gradient of collectivity, with no clear boundary.
 Second, it leaves unexplained why some predicates would contain pluralities and others not---is there a deeper explanation in terms of the properties named?
 
-Note that stubbornly distributive predicates like \emph{big} or \emph{tall} contrast with truly distributive predicates like \emph{be a man} or \emph{have blue eyes} whose meaning requires a distributive interpretation \citep{link1983}. Having blue eyes or being a man are properties that necessarily hold of individuals, hence their mandatory distributivity; (collective) size is not such a property, at least not transparently so.\footnote{Similarly, truly collective predicates like \emph{gather} or \emph{meet} name properties that require a collective interpretation by virtue of their meaning \citep{schwarzschild1994}.} There is no conceptual barrier to attributing some size directly to a plurality of individuals. Collective nouns bring this point into focus: if a group of men has blue eyes, then each member must; if a pile of boxes counts as tall, we make no direct claim about individual box heights. 
+Note that stubbornly distributive predicates like \emph{big} or \emph{tall} contrast with truly distributive predicates like \emph{be a man} or \emph{have blue eyes}, whose meaning requires a distributive interpretation \citep{link1983}. Having blue eyes or being a man are properties that necessarily hold of individuals, hence their mandatory distributivity; (collective) size is not such a property, at least not transparently so.\footnote{Similarly, truly collective predicates like \emph{gather} or \emph{meet} name properties that require a collective interpretation by virtue of their meaning \citep{schwarzschild1994}.} There is no conceptual barrier to attributing some size directly to a plurality of individuals. Collective nouns bring this point into focus: if a group of men has blue eyes, then each member must; if a pile of boxes counts as tall, we make no direct claim about individual box heights. 
 
 \ex. \a. The group of men has blue eyes. 
 	\b. The pile of boxes is tall.
@@ -736,7 +736,7 @@ As we would expect if contextual predictability of collective properties influen
 
 For the predicate \emph{heavy}, our contextual predictability manipulation had no measurable effect, presumably because collective weight is already maximally predictable. However, \emph{heavy} was sensitive to the ``move'' vs.~``inspect'' scenario manipulation: as was the trend in the results of Expt.~1, ``move'' scenarios yielded much greater collective endorsement ratings for \emph{heavy}. This manipulation privileges collective interpretations by limiting speakers' access to the information they would need to verify a distributive interpretation; Cubert lacked access to individual box weights in ``move'' scenarios. The predicates \emph{big} and \emph{tall} were not affected by the speaker knowledge scenario manipulation, owing to the fact that they name properties that are visually accessible, and thus visually assessable.
 
-An alternative interpretation of the contextual predictability effect is that in regular, stacked contexts, participants reanalyzed the plural definite description \emph{the boxes} as referring to a single individual (e.g., to a single pile, and not to a set of boxes); if \emph{the boxes} referred to a single individual, there never was any collective predication.
+An alternative interpretation of the contextual predictability effect is that in regular, stacked contexts, participants reanalyzed the plural definite description \emph{the boxes} as referring to a single individual (e.g., to a single pile, and not to a set of boxes, perhaps by imagining a silent collectivizing noun); if \emph{the boxes} referred to a single individual, there never was any collective predication.
 Such a representational coercion story raises serious problems for the semantics of plural definite descriptions \citep[for discussion, see ][]{link1983,landman1989,schwarzschild1996,link1998}. More importantly it is inconsistent with the \emph{lack} of effect for \emph{heavy}: if the pile of boxes was simply represented as an individual when stacked, we would expect greater collective interpretation rates for all predicates in regular contexts.
 
 
