added Reviewer 2's "other comments"

--- a/writing/Cubert/revision/Cubert cover letter.tex
+++ b/writing/Cubert/revision/Cubert cover letter.tex
@@ -120,6 +120,8 @@ We have followed this suggestion and replaced all but one of our ratings bar plo
 
 \subsubsection*{Reviewer 2:}
 
+\emph{General comments}
+
 \ben
 
 \item \emph{The authors should situate their findings against the backdrop of our previous experimental work on \emph{each} and \emph{together}. Haven’t we already established (first theoretically/introspectively, then experimentally across various paradigms) that \emph{each} and \emph{together} disambiguate sentences for adults, and that the interpretation of potentially ambiguous sentences is influenced by pragmatic knowledge?}
@@ -163,6 +165,92 @@ As with distributive predicates like \emph{have brown eyes} (cf.~our response to
 \item \emph{I am not able to interpret \emph{These boxes are big} collectively. (I am a native speaker of American English.) I can, however, maybe access a collective interpretation of \emph{These boxes are tall}. This paper doesn't allow me to understand why I am encountering an introspective difference between these two predicates, or why we see one in the experimental results.}
 
 \een
+
+\noindent\emph{Other comments}
+
+\begin{enumerate}
+	  \setcounter{enumi}{11}
+
+\item \emph{Abstract: The authors say that ``plural predication'' is a source of ambiguity, or should be disambiguated, but what is being disambiguated? Is it the plural predication, or the proposition, or the sentence level? (I revisit this issue of the locus of ambiguity below.)}
+
+\item \emph{Abstract: The phrase ``stubborn distributivity'' should be attributed to Schwarzschild, as it is in the main text.}
+
+\item \emph{Pg.~3: The transition at the end of the second paragraph is a bit abrupt.}
+
+\item \emph{Pg.~3: Kamp \& Partee (1995) (perhaps among others) should be cited in the second paragraph for properties that depend on the context of predication and comparison classes.}
+	
+\item \emph{Pg.~3: Please revise the description of ``stubborn distributivity'' in the last paragraph. The phenomenon is not about the contrast, as described here, but rather about the observation about the latter class of predicates.}
+	
+\item \emph{Pg.~4: Champollion (2015)'s proposal about stratified reference seems relevant to this discussion.}
+
+\item \emph{Pg.~4: The term ``complaisantly collective'' is a bit confusing. I think that the authors mean those predicates which allow for both distributive and collective interpretations, but aren't these Link's mixed predicates? These also contrast with collective predicates. (See comments above.)}
+
+\item \emph{Pg.~4: Using \emph{instantiate} in an intransitive frame seems weird to me (\emph{how regularly they instantiate in the world}, \emph{find objects that instantiate in regular physical arrangements}).}
+	
+\item \emph{Pg.~4: Are the authors claiming in the first paragraph that plural nouns such as numbers or ideas can admit of collective interpretations with distributive predicates? If so, it would be nice to get some examples.}
+
+\item \emph{Pg.~7, 14, 18, 23: It should be indicated how much participants were compensated.}
+
+\item \emph{Pg.~8: The between-subject inspect/move contrast should be theoretically motivated earlier in section 2.2.}
+
+\item \emph{Pg.~9: The sentence, ``The boxes each were big'' doesn't seem entirely natural to me. More natural would be, ``The boxes were each big.'' I'm assuming the authors wanted the words each and together to appear in the same syntactic position, and that is why they created the sentences in this way, but if that is the case, they should say so, in order to justify their choice of a non-default description that seems slightly unnatural.}
+	
+\item \emph{Pg.~10: Missing the word \emph{accessed} in the first sentence of section 2.4 (\emph{participants chose the collective referent, and therefore accessed the collective interpretation}).}
+
+\item \emph{Pg.~11: Here and elsewhere, ``Appendix'' is mentioned twice in a row.}
+
+\item \emph{Pg.~11: If the difference is not significant, then I don't think the authors are able to mention here and later on (pg. 12) that the results approach significance, or highlight this.}
+
+\item \emph{Pg.~12: If \emph{heavy} is, as the authors say, ``complaisant toward collective interpretations,'' then shouldn't the percentage of `collective' interpretations obtained for this predicate be higher than was observed?}
+
+\item \emph{Pg.~13: The authors attribute the difference between the `move' and `inspect' scenarios to the fact that in the latter condition, the speaker does not have as much knowledge about the individual boxes, and so there is a difference in the epistemic state of the speaker. Is this really the key difference? Could it just be that in the `move' scenario, the boxes were moved en masse, and so were clearly treated as a group? The authors should address this possible interpretation of the findings.}
+
+\item \emph{Pg.~13: The ordering presented in the transition between the two paragraphs at the top was a little jolting.} 
+	
+\item \emph{Pg.~13: Experiment 1 is referred to as a ``reference task'' for what I think is the first time. Presumably this is because the speaker said, ``The boxes are\ldots'' But this was a bit confusing to encounter.}
+
+\item \emph{Pg.~14-18: The role of animacy does not appear to have been controlled for in the corpus search in the naturally-occurring or derivative examples. This seems important, and should be addressed. Note that of the examples in (6) on pg. 18, there are more inanimate nouns, and the number varies for each predicate.}
+
+\item \emph{Pg.~14-18: The full list of sentences from Experiments 2a, 2b should be provided in an appendix.}
+
+\item \emph{Pg.~14: I'm worried about a circularity in the design of Experiment 2. The authors found highly frequent instances of the sentence template \emph{The NOUNS were ADJ} and created additional examples from these. Participants then chose a paraphrase for these examples. But if the participants are encountering highly frequent examples in the experiment, which presumably have an interpretation paired with them, then aren't they identifying that frequently-intended interpretation in this task?}
+
+\item \emph{Pg.~15, 19: The authors filtered out all sentences for which participants reported that the sentences did not `make sense.' I'm not sure why this was done post-hoc, instead of via a pre-experiment norming task. The 67\% `made sense' reported in Experiment 2b seems quite low to me. I would like to request that the authors to include a note about this.}
+
+\item \emph{Pg.~16, figure 4: What should be made of the near-50 to 60\% ratings/endorsement of the vast majority of the sentences? This seems troublesome to me.}
+
+\item \emph{Pg.~16, figure 4: I am still completely confused as to how certain sentences as indicated on the x axis, such as those created by the combination of eyes-open, natives-friendly, walls-white, etc.) are really given a collective reading. What exactly does this mean? In each of these instances, don’t the atomic individuals still have to have the property – if not all of them, then some near-maximal amount?}
+
+\item \emph{Pg.~18: I am concerned that the \emph{lids} noun in (6) is really eyelids (and not lids of containers), and therefore the `lids' are not literally ‘heavy’. These examples came from the Google Books corpus, so I think it is entirely possible that this is the case.}
+
+\item \emph{Pg.~18: I am also curious about the \emph{trees-heavy} pairing indicated here. What are these sentences in which trees are described as being `heavy'? Are they instead sentences describing the trees as being `heavy with fruit'? If so, again, this seems like a different sort of sentence and non-literal use of heavy.}
+
+\item \emph{Pg.~18: A similar concern might be raise about \emph{big-boys}, which has two interpretations.}
+
+\item \emph{Pg.~19-20: I would have expected the \% `collective' associated with \emph{heavy} to be higher, and would have liked for the authors to say a little more about the relatively low \% observed.}
+	
+\item \emph{Pg.~19-20: The \% `collective' for \emph{big} and \emph{tall} sure looks like an indication of “stubborn distributivity”+noise to me! If the authors think that the results should not be interpreted in this way, I think they should address this possible interpretation head on.}
+
+\item \emph{Pg.~25: If I understand Figure 8 correctly, participants were given the paraphrase sentences one on top of the other, and asked to slide the scale for each sentence. Did the scale start at 0 or 50 for each? More importantly, why present the sliding scales next to each other and not across items? I worry that this setup precludes them from allowing both to be rated highly, and that they should complement each other (which is what it looks like in Figure 9).}
+
+\item \emph{Pg.~29: The authors should explain what they mean by saying that the collective and distributive senses as `vague expressions.'}
+
+\item \emph{Pg.~31: The authors' point that the speaker ``chooses an utterance u that would most effectively communicate some state s to a literal listener'' seems to me to indicate that the speaker will take
+into account morphosyntactic and structural information when doing so, which is a point that Syrett \& Musolino (2015) have made when discussing the disambiguation of sentences with possible collective and distributive senses. The authors do not really discuss such structural/surface level cues, but should acknowledge them, because they figure into the form of the utterance chosen by the speaker.}
+
+\item \emph{Pg.~31: The authors say that the speaker's belief distribution about the state of the world depends on ``some observations o of the true world.'' Is this way of phrasing things meant to privilege perceptual over conceptual information?}
+
+\item \emph{Pg.~32: Why is the variability of the context considered a semantic factor?} 
+
+\item \emph{Pg.~32: Please explain the degrees in section 5.2.}
+
+\item \emph{Pg.~34: The wording ``an old observation about collective interpretations for gradable predicates with plural subjects'' makes me wonder at what level the authors see the ambiguity being encoded (the VP level or the sentence level), so it might be helpful to add a note somewhere about this, since there have been different approaches to the semantic treatment of the collective/distributive ambiguity over the years. (The comment in the top paragraph on pg.~38 about the locus of ambiguity is also related to this point.)}
+
+\item \emph{Pg.~36: The authors suggest that, ``stubbornly distributive predicates name collective properties that are difficult to accurately communicate.'' By this point in the paper, I am so far from convinced that the participants are really accessing a true collective reading, that on this page, I am not on board with the conclusions, and am certainly not in agreement with this claim, even though I do agree with the authors that the context is able to bring out readings that are otherwise suppressed, and I think the experiments presented in the paper do a nice job of showing that this is the case. Whether or not these non-strictly-distributive readings can really be taken to be collective readings is another matter.}
+
+\item \emph{Pg.~38: I would think that if the noun phrase is construed as an aggregate (i.e., a single collection) instead of a group, then the predicate is no longer applying to the group, but rather to the collectivizer, in which case we return to the possibility that participants may have inserted a silent collectivizing noun into their interpretation of the sentences.}
+
+\end{enumerate}
 
 
 \subsubsection*{Reviewer 3:}
