more cover letter

--- a/writing/Cubert/revision/Cubert cover letter.tex
+++ b/writing/Cubert/revision/Cubert cover letter.tex
@@ -64,11 +64,15 @@ Stanford, CA 94305\\[20pt]
 
 \item \emph{Reviewer 2 questioned whether endorsements of `together' paraphrases are indicative of collective interpretations.}
 
+The reviewer's concerns about our \emph{together} paraphrases stem from previous experimental work that suggests some flexibility in \emph{together}'s disambiguating potential. However, this work and ours share a crucial difference: all of the previous work that the reviewer mentions investigates post-VP \emph{together}, whereas we are careful to use post-NP \emph{together} precisely to avoid the reviewer's concerns. We expand on this point in our response to Reviewer 2's points 1 and 4 below.
+
 \item \emph{Reviewer 2 raised alternative accounts of the contextual effects on the interpretation of bare sentences.}
 
 \item \emph{Reviewer 2 raised the possibility of `cumulative' construals in the interpretation of bare sentences.}
 
 \item \emph{Reviewer 2 mentioned prior published research that is relevant for Experiment 1.}
+
+We now cite the suggested research and stress that our contribution is indeed a novel one (cf.~our response to Reviewer 2's point 1 below).
 
 \item \emph{Reviewer 2 recommends highlighting the novel contribution of the speaker's epistemic state.}
 
